update and fix bug database